--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -32,7 +32,7 @@ html {
 body {
   color: var(--text-clr);
   margin: 0;
-  background: url(/assets/imgs/Main/hero.png);
+  background: url(../imgs/Main/hero.png);
   background-attachment: fixed;
   height: 100vh;
   background-size: cover;
